--- a/src/NotePageNav/NotePageNav.css
+++ b/src/NotePageNav/NotePageNav.css
@@ -1,6 +1,15 @@
-  .back-button {
-    margin: 45px 20px 25px auto
+.back-button {
+    margin: 20px auto;
+    width: 100%;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 20px;
+    border: black solid 2px;
+    border-radius: 5px;
   }
   .back-button:hover {
-    background-color: lightgrey;
+    border-color: #29862e;
+    background-color: darkgrey;
+    color: white;
   }
